--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,13 @@
   # Diretório onde estão os arquivos da aplicação
   publish = "proposta-comercial"
 
+[headers]
+  [[headers.for]]
+  for = "/*.html"
+    [headers.values]
+    Content-Type = "text/html; charset=utf-8"
+    X-Content-Type-Options = "nosniff"
+
 [build.environment]
   # Configurações de ambiente (opcional)
   NODE_VERSION = "18"
