--- a/proposta-comercial/vercel.json
+++ b/proposta-comercial/vercel.json
@@ -4,5 +4,14 @@
     { "source": "/proposta", "destination": "/proposta-visualizacao.html" },
     { "source": "/proposta-visualizacao", "destination": "/proposta-visualizacao.html" },
     { "source": "/proposta-gerador", "destination": "/proposta-gerador.html" }
+  ],
+  "headers": [
+    {
+      "source": "/:path*.html",
+      "headers": [
+        { "key": "Content-Type", "value": "text/html; charset=utf-8" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" }
+      ]
+    }
   ]
 }
