--- a/proposta-comercial/vercel.json
+++ b/proposta-comercial/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/", "destination": "/index.html" },
     { "source": "/gerador", "destination": "/proposta-gerador.html" },
     { "source": "/proposta", "destination": "/proposta-visualizacao.html" },
     { "source": "/proposta-visualizacao", "destination": "/proposta-visualizacao.html" },
