--- a/proposta-comercial/vercel.json
+++ b/proposta-comercial/vercel.json
@@ -1,6 +1,5 @@
 {
   "rewrites": [
-    { "source": "/", "destination": "/index.html" },
     { "source": "/gerador", "destination": "/proposta-gerador.html" },
     { "source": "/proposta", "destination": "/proposta-visualizacao.html" },
     { "source": "/proposta-visualizacao", "destination": "/proposta-visualizacao.html" },
@@ -8,10 +7,21 @@
   ],
   "headers": [
     {
-      "source": "/:path*.html",
+      "source": "**/*.css",
       "headers": [
-        { "key": "Content-Type", "value": "text/html; charset=utf-8" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" }
+        { "key": "Content-Type", "value": "text/css" }
+      ]
+    },
+    {
+      "source": "**/*.js",
+      "headers": [
+        { "key": "Content-Type", "value": "application/javascript" }
+      ]
+    },
+    {
+      "source": "**/*.html",
+      "headers": [
+        { "key": "Content-Type", "value": "text/html; charset=utf-8" }
       ]
     }
   ]
