--- a/proposta-comercial/package.json
+++ b/proposta-comercial/package.json
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "http-server": "^14.1.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.80.0"
   }
 }
